# yamos

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  SETUP.md  docker-compose-example.yml  flake.nix
src/: couchdb.rs  main.rs  server.rs
src/auth/: authorization_code.rs  client_credentials.rs  handlers.rs  middleware.rs  mod.rs  token.rs  traits.rs
src/search/: mod.rs  watcher.rs
