[package]
name = "yamos"
version = "0.1.0"
edition = "2021"
description = "yet another mcp obsidian server, for obsidian livesync via couchdb"
license = "MIT"

[dependencies]
# MCP SDK - with both stdio and SSE transport support
# I enabled a buncha feature flags that may or may not be needed. Probably need to go through and get rid of some of them at some point
rmcp = { version = "0.12", features = ["server", "client", "transport-io", "transport-streamable-http-client", "macros", "transport-streamable-http-server", "transport-streamable-http-server-session"] }

axum = "0.8"
tower = "0.5"

tokio = { version = "1", features = ["full", "signal"] }
tokio-util = "0.7"

reqwest = { version = "0.12", features = ["json"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

schemars = "1.2"

anyhow = "1"
thiserror = "2"

base64 = "0.22"

# Logging but apparently in async world we use this
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

dotenvy = "0.15"

url = "2"

# Probably the coolest thing that humanity has ever produced
clap = { version = "4", features = ["derive", "env"] }

jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
serde_urlencoded = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sha2 = "0.10.9"
urlencoding = "2.1.3"
rand = "0.9.2"
subtle = "2.6.1"
